RIA-4474 Enabled Fortify scan (#567)